--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,131 @@
-gggg
-d
-hhhh
+<%= render partial: 'header' %>
+<div class = "wrapper">
+  <div class = "description">
+    <%# <img class = "description__image" src="https://publicdomainq.net/images/201809/17s/publicdomainq-0026387urv.jpg" height="70%" width="70%" alt="image"> %>
+    <div class = "description__text">
+      <p>
+        テニスがしたいけど、近くに仲間やコートがない方や同じぐらいの年代やスキルレベルのメンバーを集めて<br>
+        試合がしたい方をマッチングさせるためのオンラインサービスです。会員登録の際、自分の経歴やスキル<br>
+        レベルなどを登録していただくので、目的に従ったマッチングが可能となっております。<br>
+        ぜひお試しください！
+      </p>
+    </div>
+  </div>
+
+  <div class="new-tennis">
+    <div class="new-tennis__container">
+      <div class="new-tennis__container__heading">
+        <h3>新着開催テニス</h3>
+      </div>
+      <div class="new-tennis__container__contents">
+        <div class="new-tennis__container__contents__picture clearfix"> 
+          <img class = "new-tennis__container__contents__picture__image" src="http://placehold.jp/120x120.png"alt="image">
+        </div>
+        <div class="new-tennis__container__contents__date">
+          <span class="new-tennis__container__contents__column">開催日：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="new-tennis__container__contents__deadline">
+        <span class="new-tennis__container__contents__column">申し込み締切：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="new-tennis__container__contents__title">
+          <span class="new-tennis__container__contents__column">タイトル：</span>
+          <span>HIKI OPEN” ジャックマジシャン”と試合に出よう！</span>
+        </div>
+        <div class="new-tennis__container__contents__fee">
+          <span class="new-tennis__container__contents__column">金額：</span>
+          <span>1000円</span>
+        </div>
+        <div class="new-tennis__container__contents__conditions">
+          <span class="new-tennis__container__contents__column">参加条件：</span>
+          <span>平均点8点以上</span>
+        </div>
+      </div>
+      <div class="new-tennis__container__contents">
+        <div class="new-tennis__container__contents__picture clearfix"> 
+          <img class = "new-tennis__container__contents__picture__image" src="http://placehold.jp/120x120.png"alt="image">
+        </div>
+        <div class="new-tennis__container__contents__date">
+          <span class="new-tennis__container__contents__column">開催日：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="new-tennis__container__contents__deadline">
+        <span class="new-tennis__container__contents__column">申し込み締切：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="new-tennis__container__contents__title">
+          <span class="new-tennis__container__contents__column">タイトル：</span>
+          <span>HIKI OPEN” ジャックマジシャン”と試合に出よう！</span>
+        </div>
+        <div class="new-tennis__container__contents__fee">
+          <span class="new-tennis__container__contents__column">金額：</span>
+          <span>1000円</span>
+        </div>
+        <div class="new-tennis__container__contents__conditions">
+          <span class="new-tennis__container__contents__column">参加条件：</span>
+          <span>平均点8点以上</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="local-tennis">
+    <div class="local-tennis__container">
+      <div class="local-tennis__container__heading">
+        <h3>東京開催テニス</h3>
+      </div>
+      <div class="local-tennis__container__contents">
+        <div class="local-tennis__container__contents__picture clearfix"> 
+          <img class = "local-tennis__container__contents__picture__image" src="http://placehold.jp/120x120.png"alt="image">
+        </div>
+        <div class="local-tennis__container__contents__date">
+          <span class="local-tennis__container__contents__column">開催日：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="local-tennis__container__contents__deadline">
+          <span class="local-tennis__container__contents__column">申し込み締切：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="local-tennis__container__contents__title">
+          <span class="local-tennis__container__contents__column">タイトル：</span>
+          <span>【HIKI OPEN】” ジャックマジシャン”と試合に出よう！</span>
+        </div>
+        <div class="local-tennis__container__contents__fee">
+          <span class="local-tennis__container__contents__column">金額：</span>
+          <span>1000円</span>
+        </div>
+        <div class="local-tennis__container__contents__conditions">
+          <span class="local-tennis__container__contents__column">参加条件：</span>
+          <span>平均点8点以上</span>
+        </div>
+      </div>
+      <div class="local-tennis__container__contents">
+        <div class="local-tennis__container__contents__picture clearfix"> 
+          <img class = "local-tennis__container__contents__picture__image" src="http://placehold.jp/120x120.png"alt="image">
+        </div>
+        <div class="local-tennis__container__contents__date">
+          <span class="local-tennis__container__contents__column">開催日：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="local-tennis__container__contents__deadline">
+          <span class="local-tennis__container__contents__column">申し込み締切：</span>
+          <span>2020年1月3日　9:00〜12:00</span>
+        </div>
+        <div class="local-tennis__container__contents__title">
+          <span class="local-tennis__container__contents__column">タイトル：</span>
+          <span>【HIKI OPEN】” ジャックマジシャン”と試合に出よう！</span>
+        </div>
+        <div class="local-tennis__container__contents__fee">
+          <span class="local-tennis__container__contents__column">金額：</span>
+          <span>1000円</span>
+        </div>
+        <div class="local-tennis__container__contents__conditions">
+          <span class="local-tennis__container__contents__column">参加条件：</span>
+          <span>平均点8点以上</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</div>
