--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
       </p>
     </div>
   </div>
-
+  <%# <%= flash[:success] %> 
   <div class="new-tennis">
     <div class="new-tennis__container">
       <div class="new-tennis__container__heading">
