--- a/app/views/posts/_header.html.erb
+++ b/app/views/posts/_header.html.erb
@@ -1,13 +1,28 @@
 <div class = "header clearfix">
   <img class = "header__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image">
-  <img class = "header__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image">
-  <img class = "header__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image">
-  <ul class = "header__inner">
-    <img class = "header__inner__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image">
-    <li>
-      <%# <a href="">開催する</a> %>
-      <%= link_to '開催する', "/posts/new", method: :get %>
-    </li>
-    <li><a href="">ログイン</a></li>
-    <li><a href="">マイページ</a></li>  
+  <%# <img class = "header__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image">
+  <img class = "header__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image"> %>
+  <div class = "header__sentence">
+    <% if user_signed_in? %>  
+      <span>ようこそ、<%= current_user.nickname %>さん♪ </span>
+      <span>あなたは、テニス歴【約<%= @ability.experience%>年】、 </span>
+      <span> スキル(平均値)は【<%= @average %>点】、  </span>
+      <span>コミュ力【<%= @ability.communication%>点】</span>
+
+    <% else %>
+      <span>ようこそ、ゲストさん♪　会員登録してぜひサービスをご利用ください♪</span>
+    <% end %>
   </div>
+  <ul class = "header__inner">
+    <%# <img class = "header__inner__image" src="https://illustimage.com/photo/dl/463.png?20160705" height="50px" width="50px" alt="image"> %>
+    <li><%= link_to 'TOPページ', "/", method: :get %></li>
+    <% if user_signed_in? %>
+      <li><%= link_to 'サインアウト', "/users/sign_out", method: :delete %></li>
+      <li><%= link_to 'マイページ', "", method: :get %></li>
+      <li><%= link_to '開催する', "/posts/new", method: :get %></li>
+    <% else %>
+      <li><%= link_to 'ログイン', "/users/sign_in", method: :get %></li>
+      <li><%= link_to '新規会員登録', "/users/sign_up", method: :get %></li>
+    <% end %>
+  </ul>
+</div>
