--- a/app/assets/stylesheets/post/_index.scss
+++ b/app/assets/stylesheets/post/_index.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .wrapper {
-  padding-top: 80px;
-
+  padding-top: 50px;
+  background-color:#F5F5F5;
 }
 
 .description{
@@ -46,21 +46,41 @@
       background-color: white;
       padding: 32px;
       margin-bottom: 20px;
+      box-shadow: 5px 5px 5px rgba(0,0,0,0.6);
+      color: black;
     
       &__picture{
         float: left; 
         padding-right:10px;
       }
-      &__title{
-        &__contents{
-          // margin-right:55px;
-
+      &__detail{
+        float: left;
+        &__column{
+          display:inline-block;
+          width:110px;
+          float: left;
+        }
+        &__value{
+          float: left;
         }
       }
-      &__column{
-        display:inline-block;
-        width:140px;
-      }
+      &__jouken{
+        float: right;
+        &__table{
+          margin-top: -20px;
+          margin-right: 30px;
+
+          tr{
+            border: 1px dashed grey;
+            text-align: center;
+          }
+          th{
+            background-color: antiquewhite;
+            padding: 2px 4px;
+            text-align: center;
+          }
+        }
+      }      
     }
   }
 
