--- a/app/assets/stylesheets/post/_index.scss
+++ b/app/assets/stylesheets/post/_index.scss
@@ -49,12 +49,17 @@
       box-shadow: 5px 5px 5px rgba(0,0,0,0.6);
       color: black;
     
+      &__box{
+        display: flex;
+      }
+       
       &__picture{
-        float: left; 
+        // float: left; 
         padding-right:10px;
       }
       &__detail{
-        float: left;
+        // float: right;
+        display: flex;
         &__column{
           display:inline-block;
           width:110px;
@@ -62,12 +67,16 @@
         }
         &__value{
           float: left;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          max-width: 512px;
         }
       }
       &__jouken{
         float: right;
         &__table{
-          margin-top: -20px;
+          margin-top: -50px;
           margin-right: 30px;
 
           tr{
