--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,7 +48,7 @@
       <br>
 
       <%= i.label :dominant, "利き腕" %><br />
-      <%= i.select :dominant, [["右利き","右"],["左利き","左"]], prompt: "--" %>
+      <%= i.select :dominant, [["右利き","右利き"],["左利き","左利き"]], prompt: "--" %>
       <br>
 
       <%= i.label :serve, "サービス力" %><br />
