--- a/app/views/posts/_post_box.html.erb
+++ b/app/views/posts/_post_box.html.erb
@@ -1,8 +1,18 @@
           <%= link_to "/posts/#{post.id}" do %>
             <div class="new-tennis__container__contents clearfix">
-              <div class="new-tennis__container__contents__box">
+              <div class="new-tennis__container__contents__box">              
                 <div class="new-tennis__container__contents__picture"> 
                   <%= image_tag post.image, width:"120", height:"120", alt:"image", class: "new-tennis__container__contents__picture__image"%>
+                  <% if user_signed_in? && current_user.id == post.user_id %>
+                    <div class = "new-tennis__container__contents__button">
+                      <span class = "new-tennis__container__contents__button__delete">
+                        <%= link_to '削除', "/posts/#{post.id}", method: :delete %>
+                      </span>
+                      <span class = "new-tennis__container__contents__button__change">
+                        <%= link_to '編集', "/posts/#{post.id}/edit", method: :get %>
+                      </span>
+                    </div>  
+                  <% end %>  
                 </div>
                 <div class="new-tennis__container__contents__detail">
                   <div class="new-tennis__container__contents__detail__column">
